# Omsi2Komsi

./: .gitignore  Cargo.toml  LICENSE  Omsi2Komsi.opl  README.en.md  README.md  SECURITY.md  build.sh  build.txt  liesmich.txt  omsi2komsi.opl  omsilogger.opl
.github/workflows/: build.yml  release.yml  rust.yml
src/: api.rs  komsi.rs  lib.rs  omsilogger.rs  opts.rs  serial.rs  vehicle.rs
