[package]
name = "omsi_2_komsi"
version = "2.3.0"
edition = "2024"
rust-version = "1.92"
authors = ["ThatZok <af@komplix.de>"]
license = "GPL-3.0-or-later"
license-file = "LICENSE"

[lib]
name = "omsi2komsi"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[example]]
name = "omsilogger"
crate-type = ["cdylib"]
path = "src/omsilogger.rs"

[dependencies]
libc = "*"
winapi = { version = "0.3.9", features = ["consoleapi", "minwindef"] }
user32-sys = "0.2"
serialport = "4.8"
configparser = "3.1"
chrono = "0.4"
atomic_float = "1.1"
komsi="0.5.0"

[dependencies.windows]
version = "0.*"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader"
]

